tests/fixtures/pass/class-annotation-imported.php
<?php

namespace Chaozhuo\Helper;

use winwin\winner\fixtures\Bar;

/**
 * @Bar
 */
class Foo
{
}
