tests/fixtures/fail/class-annotation.php
<?php
namespace Chaozhuo\Helper;

/**
 * @Bar
 */
class Foo
{
}